# Nexus

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  railway.toml  status.md
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  health.py  integrations.py  nodes.py  runs.py  schemas.py  workflows.py
backend/app/core/: config.py  db.py  errors.py  security.py
backend/app/modules/ai/: generator.py  service.py
backend/app/modules/auth/: dependencies.py  firebase.py  models.py
backend/app/modules/engine/: executor.py  graph.py  resolver.py  services.py
backend/app/modules/integrations/: models.py  oauth.py  vault.py
backend/app/modules/nodes/: __init__.py  base.py  registry.py
backend/app/modules/nodes/builtin/: __init__.py  ai_node.py  condition_node.py  delay_node.py  discord_node.py  github_node.py  gmail_node.py  http_node.py  linear_node.py  notion_node.py  slack_node.py  storage_node.py
backend/app/modules/runs/: models.py  service.py  store.py
backend/app/modules/workflows/: models.py  service.py
backend/app/workers/: main.py
backend/tests/: test_ai_generator.py  test_engine.py  test_integrations.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx
frontend/src/lib/: api.ts  queries.ts  theme.ts  utils.ts
(+16 files in other folders)
